--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to create array"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -11,7 +18,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5]\n",
+      "[ 5 15 25]\n",
+      "[ 5 15 25]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([5., 5., 5.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.array([1,3,5])\n",
+    "print(b) \n",
+    "print(b.dot(5))\n",
+    "print(np.dot(b,5))\n",
+    "c = (b.dot(5))\n",
+    "c > 1\n",
+    "d = c/5\n",
+    "d = c/[1,3,5]\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
